--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    // Conditional for compatibility with AGP <4.2.
+    if  (project.android.hasProperty("namespace")) {
+        namespace 'dev.duynp.flutter_health_connect'
+    }
+
     compileSdkVersion 34
 
     compileOptions {
