--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -57,6 +57,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    namespace 'dev.duynp.flutter_health_connect_example'
 }
 
 flutter {
